appId: com.example.maestroTest
---
- launchApp
- tapOn: "Increment"
- assertVisible: "1"
- tapOn: "plus_two"
- assertVisible: "3"
